y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH
    INVALID_TOKEN


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOATING_CONSTANT
    4                   | CHARACTER_CONSTANT
    5                   | STRING_LITERAL
    6                   | LEFT_PARENTHESIS expression RIGHT_PARENTHESIS

    7 postfix_expression: primary_expression
    8                   | postfix_expression LEFT_SQUARE_BRACE expression RIGHT_SQUARE_BRACE
    9                   | postfix_expression LEFT_PARENTHESIS argument_expression_list_opt RIGHT_PARENTHESIS
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression ARROW IDENTIFIER
   12                   | postfix_expression INCREMENT
   13                   | postfix_expression DECREMENT
   14                   | LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS LEFT_CURLY_BRACE initialiser_list RIGHT_CURLY_BRACE
   15                   | LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS LEFT_CURLY_BRACE initialiser_list COMMA RIGHT_CURLY_BRACE

   16 argument_expression_list_opt: argument_expression_list
   17                             | ε

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS

   26 unary_operator: BITWISE_AND
   27               | ASTERISK
   28               | PLUS
   29               | MINUS
   30               | TILDE
   31               | EXCLAMATION

   32 cast_expression: unary_expression
   33                | LEFT_PARENTHESIS type_name RIGHT_PARENTHESIS cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression ASTERISK cast_expression
   36                          | multiplicative_expression SLASH cast_expression
   37                          | multiplicative_expression MODULO cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_SHIFT additive_expression
   43                 | shift_expression RIGHT_SHIFT additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LESS_THAN shift_expression
   46                      | relational_expression GREATER_THAN shift_expression
   47                      | relational_expression LESS_EQUAL_THAN shift_expression
   48                      | relational_expression GREATER_EQUAL_THAN shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQUALS relational_expression
   51                    | equality_expression NOT_EQUALS relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression BITWISE_AND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression BITWISE_XOR AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   58 M: ε

   59 N: ε

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: ASSIGNMENT
   69                    | ASTERISK_ASSIGNMENT
   70                    | SLASH_ASSIGNMENT
   71                    | MODULO_ASSIGNMENT
   72                    | PLUS_ASSIGNMENT
   73                    | MINUS_ASSIGNMENT
   74                    | LEFT_SHIFT_ASSIGNMENT
   75                    | RIGHT_SHIFT_ASSIGNMENT
   76                    | BITWISE_AND_ASSIGNMENT
   77                    | BITWISE_XOR_ASSIGNMENT
   78                    | BITWISE_OR_ASSIGNMENT

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   83 init_declarator_list_opt: init_declarator_list
   84                         | ε

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | ε

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator ASSIGNMENT initialiser

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOIDTYPE
  100               | CHARTYPE
  101               | SHORT
  102               | INTTYPE
  103               | LONG
  104               | FLOATTYPE
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | _BOOL
  109               | _COMPLEX
  110               | _IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | ε

  116 enum_specifier: ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | ENUM IDENTIFIER

  119 identifier_opt: IDENTIFIER
  120               | ε

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER ASSIGNMENT constant_expression

  125 type_qualifier: CONST
  126               | RESTRICT
  127               | VOLATILE

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 change_scope: ε

  132 direct_declarator: IDENTIFIER
  133                  | LEFT_PARENTHESIS declarator RIGHT_PARENTHESIS
  134                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list assignment_expression RIGHT_SQUARE_BRACE
  135                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list RIGHT_SQUARE_BRACE
  136                  | direct_declarator LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
  137                  | direct_declarator LEFT_SQUARE_BRACE RIGHT_SQUARE_BRACE
  138                  | direct_declarator LEFT_SQUARE_BRACE STATIC type_qualifier_list assignment_expression RIGHT_SQUARE_BRACE
  139                  | direct_declarator LEFT_SQUARE_BRACE STATIC assignment_expression RIGHT_SQUARE_BRACE
  140                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACE
  141                  | direct_declarator LEFT_SQUARE_BRACE type_qualifier_list ASTERISK RIGHT_SQUARE_BRACE
  142                  | direct_declarator LEFT_SQUARE_BRACE ASTERISK RIGHT_SQUARE_BRACE
  143                  | direct_declarator LEFT_PARENTHESIS change_scope parameter_type_list RIGHT_PARENTHESIS
  144                  | direct_declarator LEFT_PARENTHESIS identifier_list RIGHT_PARENTHESIS
  145                  | direct_declarator LEFT_PARENTHESIS change_scope RIGHT_PARENTHESIS

  146 type_qualifier_list_opt: type_qualifier_list
  147                        | ε

  148 pointer: ASTERISK type_qualifier_list_opt
  149        | ASTERISK type_qualifier_list_opt pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list COMMA ELLIPSIS

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: IDENTIFIER
  159                | identifier_list COMMA IDENTIFIER

  160 type_name: specifier_qualifier_list

  161 initialiser: assignment_expression
  162            | LEFT_CURLY_BRACE initialiser_list RIGHT_CURLY_BRACE
  163            | LEFT_CURLY_BRACE initialiser_list COMMA RIGHT_CURLY_BRACE

  164 initialiser_list: designation_opt initialiser
  165                 | initialiser_list COMMA designation_opt initialiser

  166 designation_opt: designation
  167                | ε

  168 designation: designator_list ASSIGNMENT

  169 designator_list: designator
  170                | designator_list designator

  171 designator: LEFT_SQUARE_BRACE constant_expression RIGHT_SQUARE_BRACE
  172           | DOT IDENTIFIER

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER COLON statement
  180                  | CASE constant_expression COLON statement
  181                  | DEFAULT COLON statement

  182 compound_statement: LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

  183 block_item_list_opt: block_item_list
  184                    | ε

  185 block_item_list: block_item
  186                | block_item_list M block_item

  187 block_item: declaration
  188           | statement

  189 expression_statement: expression_opt SEMI_COLON

  190 expression_opt: expression
  191               | ε

  192 selection_statement: IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS M statement N
  193                    | IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS M statement N ELSE M statement
  194                    | SWITCH LEFT_PARENTHESIS expression RIGHT_PARENTHESIS statement

  195 iteration_statement: WHILE M LEFT_PARENTHESIS expression RIGHT_PARENTHESIS M statement
  196                    | DO M statement M WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS SEMI_COLON
  197                    | FOR LEFT_PARENTHESIS expression_opt SEMI_COLON M expression_opt SEMI_COLON M expression_opt N RIGHT_PARENTHESIS M statement
  198                    | FOR LEFT_PARENTHESIS declaration expression_opt SEMI_COLON expression_opt RIGHT_PARENTHESIS statement

  199 jump_statement: GOTO IDENTIFIER SEMI_COLON
  200               | CONTINUE SEMI_COLON
  201               | BREAK SEMI_COLON
  202               | RETURN expression_opt SEMI_COLON

  203 translation_unit: external_declaration
  204                 | translation_unit external_declaration

  205 external_declaration: function_definition
  206                     | declaration

  207 function_definition: declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

  208 declaration_list_opt: declaration_list
  209                     | ε

  210 declaration_list: declaration
  211                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 97
    BREAK (259) 201
    CASE (260) 180
    CHARTYPE (261) 100
    CONST (262) 125
    CONTINUE (263) 200
    DEFAULT (264) 181
    DO (265) 196
    DOUBLE (266) 105
    ELSE (267) 193
    ENUM (268) 116 117 118
    EXTERN (269) 95
    FLOATTYPE (270) 104
    FOR (271) 197 198
    GOTO (272) 199
    IF (273) 192 193
    INLINE (274) 128
    INTTYPE (275) 102
    LONG (276) 103
    REGISTER (277) 98
    RESTRICT (278) 126
    RETURN (279) 202
    SHORT (280) 101
    SIGNED (281) 106
    SIZEOF (282) 24 25
    STATIC (283) 96 138 139 140
    STRUCT (284)
    SWITCH (285) 194
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 107
    VOIDTYPE (289) 99
    VOLATILE (290) 127
    WHILE (291) 195 196
    _BOOL (292) 108
    _COMPLEX (293) 109
    _IMAGINARY (294) 110
    IDENTIFIER <symbol> (295) 1 10 11 118 119 123 124 132 158 159 172 179 199
    INTEGER_CONSTANT <intVal> (296) 2
    FLOATING_CONSTANT <floatVal> (297) 3
    CHARACTER_CONSTANT <charVal> (298) 4
    STRING_LITERAL <strVal> (299) 5
    LEFT_PARENTHESIS (300) 6 9 14 15 25 33 133 143 144 145 192 193 194 195 196 197 198
    RIGHT_PARENTHESIS (301) 6 9 14 15 25 33 133 143 144 145 192 193 194 195 196 197 198
    LEFT_SQUARE_BRACE (302) 8 134 135 136 137 138 139 140 141 142 171
    RIGHT_SQUARE_BRACE (303) 8 134 135 136 137 138 139 140 141 142 171
    LEFT_CURLY_BRACE (304) 14 15 116 117 162 163 182 207
    RIGHT_CURLY_BRACE (305) 14 15 116 117 162 163 182 207
    INCREMENT (306) 12 21
    DECREMENT (307) 13 22
    PLUS (308) 28 39
    MINUS (309) 29 40
    ASTERISK (310) 27 35 141 142 148 149
    SLASH (311) 36
    MODULO (312) 37
    EQUALS (313) 50
    NOT_EQUALS (314) 51
    LESS_THAN (315) 45
    GREATER_THAN (316) 46
    LESS_EQUAL_THAN (317) 47
    GREATER_EQUAL_THAN (318) 48
    BITWISE_AND (319) 26 53
    BITWISE_OR (320) 57
    BITWISE_XOR (321) 55
    LEFT_SHIFT (322) 42
    RIGHT_SHIFT (323) 43
    TILDE (324) 30
    LOGICAL_AND (325) 61
    LOGICAL_OR (326) 63
    EXCLAMATION (327) 31
    ASSIGNMENT (328) 68 94 124 168
    PLUS_ASSIGNMENT (329) 72
    MINUS_ASSIGNMENT (330) 73
    ASTERISK_ASSIGNMENT (331) 69
    SLASH_ASSIGNMENT (332) 70
    MODULO_ASSIGNMENT (333) 71
    BITWISE_AND_ASSIGNMENT (334) 76
    BITWISE_OR_ASSIGNMENT (335) 78
    BITWISE_XOR_ASSIGNMENT (336) 77
    LEFT_SHIFT_ASSIGNMENT (337) 74
    RIGHT_SHIFT_ASSIGNMENT (338) 75
    QUESTION_MARK (339) 65
    DOT (340) 10 172
    ARROW (341) 11
    COLON (342) 65 179 180 181
    SEMI_COLON (343) 82 189 196 197 198 199 200 201 202
    ELLIPSIS (344) 153
    COMMA (345) 15 19 80 92 117 122 153 155 159 163 165
    HASH (346)
    INVALID_TOKEN (347)
    THEN (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    primary_expression <expression> (95)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression <array> (96)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 8 9 10 11 12 13 20
    argument_expression_list_opt <parameterCount> (97)
        on left: 16 17
        on right: 9
    argument_expression_list <parameterCount> (98)
        on left: 18 19
        on right: 16 19
    unary_expression <array> (99)
        on left: 20 21 22 23 24 25
        on right: 21 22 24 32 67
    unary_operator <unaryOperator> (100)
        on left: 26 27 28 29 30 31
        on right: 23
    cast_expression <array> (101)
        on left: 32 33
        on right: 23 33 34 35 36 37
    multiplicative_expression <expression> (102)
        on left: 34 35 36 37
        on right: 35 36 37 38 39 40
    additive_expression <expression> (103)
        on left: 38 39 40
        on right: 39 40 41 42 43
    shift_expression <expression> (104)
        on left: 41 42 43
        on right: 42 43 44 45 46 47 48
    relational_expression <expression> (105)
        on left: 44 45 46 47 48
        on right: 45 46 47 48 49 50 51
    equality_expression <expression> (106)
        on left: 49 50 51
        on right: 50 51 52 53
    AND_expression <expression> (107)
        on left: 52 53
        on right: 53 54 55
    exclusive_OR_expression <expression> (108)
        on left: 54 55
        on right: 55 56 57
    inclusive_OR_expression <expression> (109)
        on left: 56 57
        on right: 57 60 61
    M <instrNo> (110)
        on left: 58
        on right: 61 63 65 186 192 193 195 196 197
    N <statement> (111)
        on left: 59
        on right: 65 192 193 197
    logical_AND_expression <expression> (112)
        on left: 60 61
        on right: 61 62 63
    logical_OR_expression <expression> (113)
        on left: 62 63
        on right: 63 64 65
    conditional_expression <expression> (114)
        on left: 64 65
        on right: 65 66 81
    assignment_expression <expression> (115)
        on left: 66 67
        on right: 18 19 67 79 80 134 136 138 139 140 161
    assignment_operator (116)
        on left: 68 69 70 71 72 73 74 75 76 77 78
        on right: 67
    expression <expression> (117)
        on left: 79 80
        on right: 6 8 65 80 190 192 193 194 195 196
    constant_expression (118)
        on left: 81
        on right: 124 171 180
    declaration (119)
        on left: 82
        on right: 187 198 206 210 211
    init_declarator_list_opt (120)
        on left: 83 84
        on right: 82
    declaration_specifiers (121)
        on left: 85 86 87 88
        on right: 82 89 156 157 207
    declaration_specifiers_opt (122)
        on left: 89 90
        on right: 85 86 87 88
    init_declarator_list (123)
        on left: 91 92
        on right: 83 92
    init_declarator <symbol> (124)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (125)
        on left: 95 96 97 98
        on right: 85
    type_specifier (126)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 86 112
    specifier_qualifier_list (127)
        on left: 112 113
        on right: 114 160
    specifier_qualifier_list_opt (128)
        on left: 114 115
        on right: 112 113
    enum_specifier (129)
        on left: 116 117 118
        on right: 111
    identifier_opt (130)
        on left: 119 120
        on right: 116 117
    enumerator_list (131)
        on left: 121 122
        on right: 116 117 122
    enumerator (132)
        on left: 123 124
        on right: 121 122
    type_qualifier (133)
        on left: 125 126 127
        on right: 87 113 150 151
    function_specifier (134)
        on left: 128
        on right: 88
    declarator <symbol> (135)
        on left: 129 130
        on right: 93 94 133 156 207
    change_scope (136)
        on left: 131
        on right: 143 145 207
    direct_declarator <symbol> (137)
        on left: 132 133 134 135 136 137 138 139 140 141 142 143 144 145
        on right: 129 130 134 135 136 137 138 139 140 141 142 143 144 145
    type_qualifier_list_opt (138)
        on left: 146 147
        on right: 148 149
    pointer <symbolType> (139)
        on left: 148 149
        on right: 129 149
    type_qualifier_list (140)
        on left: 150 151
        on right: 134 135 138 140 141 146 151
    parameter_type_list (141)
        on left: 152 153
        on right: 143
    parameter_list (142)
        on left: 154 155
        on right: 152 153 155
    parameter_declaration (143)
        on left: 156 157
        on right: 154 155
    identifier_list (144)
        on left: 158 159
        on right: 144 159
    type_name (145)
        on left: 160
        on right: 14 15 25 33
    initialiser <symbol> (146)
        on left: 161 162 163
        on right: 94 164 165
    initialiser_list (147)
        on left: 164 165
        on right: 14 15 162 163 165
    designation_opt (148)
        on left: 166 167
        on right: 164 165
    designation (149)
        on left: 168
        on right: 166
    designator_list (150)
        on left: 169 170
        on right: 168 170
    designator (151)
        on left: 171 172
        on right: 169 170
    statement <statement> (152)
        on left: 173 174 175 176 177 178
        on right: 179 180 181 188 192 193 194 195 196 197 198
    labeled_statement <statement> (153)
        on left: 179 180 181
        on right: 173
    compound_statement <statement> (154)
        on left: 182
        on right: 174
    block_item_list_opt <statement> (155)
        on left: 183 184
        on right: 182 207
    block_item_list <statement> (156)
        on left: 185 186
        on right: 183 186
    block_item <statement> (157)
        on left: 187 188
        on right: 185 186
    expression_statement <expression> (158)
        on left: 189
        on right: 175
    expression_opt <expression> (159)
        on left: 190 191
        on right: 189 197 198 202
    selection_statement <statement> (160)
        on left: 192 193 194
        on right: 176
    iteration_statement <statement> (161)
        on left: 195 196 197 198
        on right: 177
    jump_statement <statement> (162)
        on left: 199 200 201 202
        on right: 178
    translation_unit (163)
        on left: 203 204
        on right: 0 204
    external_declaration (164)
        on left: 205 206
        on right: 203 204
    function_definition (165)
        on left: 207
        on right: 205
    declaration_list_opt (166)
        on left: 208 209
        on right: 207
    declaration_list (167)
        on left: 210 211
        on right: 208 211


State 0

    0 $accept: • translation_unit $end
   82 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOIDTYPE
  100               | • CHARTYPE
  101               | • SHORT
  102               | • INTTYPE
  103               | • LONG
  104               | • FLOATTYPE
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • _BOOL
  109               | • _COMPLEX
  110               | • _IMAGINARY
  111               | • enum_specifier
  116 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | • ENUM IDENTIFIER
  125 type_qualifier: • CONST
  126               | • RESTRICT
  127               | • VOLATILE
  128 function_specifier: • INLINE
  203 translation_unit: • external_declaration
  204                 | • translation_unit external_declaration
  205 external_declaration: • function_definition
  206                     | • declaration
  207 function_definition: • declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

    AUTO        shift, and go to state 1
    CHARTYPE    shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOATTYPE   shift, and go to state 7
    INLINE      shift, and go to state 8
    INTTYPE     shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOIDTYPE    shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   97 storage_class_specifier: AUTO •

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHARTYPE •

    $default  reduce using rule 100 (type_specifier)


State 3

  125 type_qualifier: CONST •

    $default  reduce using rule 125 (type_qualifier)


State 4

  105 type_specifier: DOUBLE •

    $default  reduce using rule 105 (type_specifier)


State 5

  116 enum_specifier: ENUM • identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | ENUM • identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | ENUM • IDENTIFIER
  119 identifier_opt: • IDENTIFIER
  120               | ε •  [LEFT_CURLY_BRACE]

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 33


State 6

   95 storage_class_specifier: EXTERN •

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: FLOATTYPE •

    $default  reduce using rule 104 (type_specifier)


State 8

  128 function_specifier: INLINE •

    $default  reduce using rule 128 (function_specifier)


State 9

  102 type_specifier: INTTYPE •

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG •

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: REGISTER •

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  126 type_qualifier: RESTRICT •

    $default  reduce using rule 126 (type_qualifier)


State 13

  101 type_specifier: SHORT •

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED •

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC •

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: UNSIGNED •

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: VOIDTYPE •

    $default  reduce using rule 99 (type_specifier)


State 18

  127 type_qualifier: VOLATILE •

    $default  reduce using rule 127 (type_qualifier)


State 19

  108 type_specifier: _BOOL •

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: _COMPLEX •

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: _IMAGINARY •

    $default  reduce using rule 110 (type_specifier)


State 22

  206 external_declaration: declaration •

    $default  reduce using rule 206 (external_declaration)


State 23

   82 declaration: declaration_specifiers • init_declarator_list_opt SEMI_COLON
   83 init_declarator_list_opt: • init_declarator_list
   84                         | ε •  [SEMI_COLON]
   91 init_declarator_list: • init_declarator
   92                     | • init_declarator_list COMMA init_declarator
   93 init_declarator: • declarator
   94                | • declarator ASSIGNMENT initialiser
  129 declarator: • pointer direct_declarator
  130           | • direct_declarator
  132 direct_declarator: • IDENTIFIER
  133                  | • LEFT_PARENTHESIS declarator RIGHT_PARENTHESIS
  134                  | • direct_declarator LEFT_SQUARE_BRACE type_qualifier_list assignment_expression RIGHT_SQUARE_BRACE
  135                  | • direct_declarator LEFT_SQUARE_BRACE type_qualifier_list RIGHT_SQUARE_BRACE
  136                  | • direct_declarator LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
  137                  | • direct_declarator LEFT_SQUARE_BRACE RIGHT_SQUARE_BRACE
  138                  | • direct_declarator LEFT_SQUARE_BRACE STATIC type_qualifier_list assignment_expression RIGHT_SQUARE_BRACE
  139                  | • direct_declarator LEFT_SQUARE_BRACE STATIC assignment_expression RIGHT_SQUARE_BRACE
  140                  | • direct_declarator LEFT_SQUARE_BRACE type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACE
  141                  | • direct_declarator LEFT_SQUARE_BRACE type_qualifier_list ASTERISK RIGHT_SQUARE_BRACE
  142                  | • direct_declarator LEFT_SQUARE_BRACE ASTERISK RIGHT_SQUARE_BRACE
  143                  | • direct_declarator LEFT_PARENTHESIS change_scope parameter_type_list RIGHT_PARENTHESIS
  144                  | • direct_declarator LEFT_PARENTHESIS identifier_list RIGHT_PARENTHESIS
  145                  | • direct_declarator LEFT_PARENTHESIS change_scope RIGHT_PARENTHESIS
  148 pointer: • ASTERISK type_qualifier_list_opt
  149        | • ASTERISK type_qualifier_list_opt pointer
  207 function_definition: declaration_specifiers • declarator declaration_list_opt change_scope LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

    IDENTIFIER        shift, and go to state 34
    LEFT_PARENTHESIS  shift, and go to state 35
    ASTERISK          shift, and go to state 36

    $default  reduce using rule 84 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 37
    init_declarator_list      go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    direct_declarator         go to state 41
    pointer                   go to state 42


State 24

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   85                       | storage_class_specifier • declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: • declaration_specifiers
   90                           | ε •  [IDENTIFIER, LEFT_PARENTHESIS, RIGHT_PARENTHESIS, ASTERISK, SEMI_COLON, COMMA]
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOIDTYPE
  100               | • CHARTYPE
  101               | • SHORT
  102               | • INTTYPE
  103               | • LONG
  104               | • FLOATTYPE
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • _BOOL
  109               | • _COMPLEX
  110               | • _IMAGINARY
  111               | • enum_specifier
  116 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | • ENUM IDENTIFIER
  125 type_qualifier: • CONST
  126               | • RESTRICT
  127               | • VOLATILE
  128 function_specifier: • INLINE

    AUTO        shift, and go to state 1
    CHARTYPE    shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOATTYPE   shift, and go to state 7
    INLINE      shift, and go to state 8
    INTTYPE     shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOIDTYPE    shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   85 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   86                       | • type_specifier declaration_specifiers_opt
   86                       | type_specifier • declaration_specifiers_opt
   87                       | • type_qualifier declaration_specifiers_opt
   88                       | • function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: • declaration_specifiers
   90                           | ε •  [IDENTIFIER, LEFT_PARENTHESIS, RIGHT_PARENTHESIS, ASTERISK, SEMI_COLON, COMMA]
   95 storage_class_specifier: • EXTERN
   96                        | • STATIC
   97                        | • AUTO
   98                        | • REGISTER
   99 type_specifier: • VOIDTYPE
  100               | • CHARTYPE
  101               | • SHORT
  102               | • INTTYPE
  103               | • LONG
  104               | • FLOATTYPE
  105               | • DOUBLE
  106               | • SIGNED
  107               | • UNSIGNED
  108               | • _BOOL
  109               | • _COMPLEX
  110               | • _IMAGINARY
  111               | • enum_specifier
  116 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list RIGHT_CURLY_BRACE
  117               | • ENUM identifier_opt LEFT_CURLY_BRACE enumerator_list COMMA RIGHT_CURLY_BRACE
  118               | • ENUM IDENTIFIER
  125 type_qualifier: • CONST
  126               | • RESTRICT
  127               | • VOLATILE
  128 function_specifier: • INLINE
